# harness-engineering-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  railway.json  serve.py
.github/workflows/: ci.yml  deploy.yml  eval.yml
app/: config.py
app/agents/: __init__.py  query_rewriter.py  supervisor.py  synthesizer.py
app/api/: lambda_handler.py  main.py  middleware.py  routes.py  schemas.py
app/observability/: metrics.py  tracing.py
app/retrieval/: cache.py  hybrid.py  rate_limiter.py
app/sql/: agent.py
docs/adr/: 001-parser-selection.md  002-datastore-choice.md  003-extraction-quality-bugs-and-fixes.md  004-railway-over-lambda.md
docs/audit/: pre-deployment-report.md
evals/: run_eval.py
evals/golden_set/: queries.json
evals/results/: eval_results.json
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
frontend/src/components/: Markdown.tsx
frontend/src/lib/: api.ts  sessions.ts  types.ts
ingestion/: chunker.py  db.py  elements.py  embedder.py  entity_extractor.py  parser_dispatch.py  run.py
ingestion/parsers/: docx_parser.py  html_parser.py  pdf_parser.py
scripts/: clean_db.py  smoke_test.py  test_agent.py  test_api.py
tests/: conftest.py  test_api.py  test_cache.py  test_chunker.py  test_input_validation.py  test_observability.py  test_parser_dispatch.py  test_rate_limiter.py  test_sql_safety.py
tests/integration/: test_pipeline.py
