[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion", "evals"]

[project]
name = "harness-engineering-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
# Runtime dependencies — what the FastAPI app imports on the request path.
# Ingestion- and eval-only libraries live in dependency groups below so the
# deployed container ships runtime deps only (Dockerfile --no-default-groups).
dependencies = [
    "anthropic>=0.104.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=0.2.50",
    "langgraph-supervisor>=0.0.31",
    "langsmith>=0.8.5",
    "mangum>=0.21.0",
    "openai>=2.38.0",
    "pgvector>=0.4.2",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "sse-starlette>=3.4.4",
    "tiktoken>=0.13.0",
    "upstash-redis>=1.7.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.15.14",
]
# Document parsers — used by ingestion/ only, never on the request path.
ingestion = [
    "beautifulsoup4>=4.14.3",
    "faker>=40.19.1",
    "lxml>=6.1.1",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "rank-bm25>=0.2.2",
    "trafilatura>=2.0.0",
]
# RAGAS and its heavy transitive stack (pyarrow, scipy, pandas) — evals/ only.
# This was the bulk of the old image weight.
eval = [
    "ragas>=0.4.3",
]

[tool.uv]
# Local dev and CI install everything by default (behavior unchanged); the
# Docker build opts out with --no-default-groups to ship runtime deps only.
default-groups = ["dev", "ingestion", "eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires live credentials (Anthropic, OpenAI, Supabase, Redis)",
]
testpaths = ["tests"]
